[gd_scene load_steps=2 format=3 uid="uid://ekn0mmil2dv0"]

[ext_resource type="Script" uid="uid://by3vrrr7ffeb3" path="res://UI/TileInfoPanel.gd" id="1_xhabm"]

[node name="TileInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -949.0
offset_bottom = -347.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhabm")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TileNameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TileTypeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TileDescriptionLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
autowrap_mode = 3

[node name="ActionsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close"
